maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:13: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  for(x->0 to l-1)
  ^JediEscaper:14: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  {
  ^JediEscaper:25: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  return res
  ^JediEscaper:28: error: ':' expected but ',' found.
def arround(x,y,cpt) {
             ^JediEscaper:93: error: identifier expected but '}' found.
}
^